--- a/XForms.Print/XForms.Print.Droid/XForms.Print.Droid.csproj
+++ b/XForms.Print/XForms.Print.Droid/XForms.Print.Droid.csproj
@@ -106,9 +106,12 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PrinterService.cs" />
+    <Compile Include="TestPrintDocumentAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="pdf-test.pdf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
