--- a/XForms.Print/XForms.Print/XForms.Print.csproj
+++ b/XForms.Print/XForms.Print/XForms.Print.csproj
@@ -38,6 +38,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IPrinterService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
